# encontro-engenharia-api-fastapi-googlecloud

./: .gitignore  docker-compose.yaml
cloudfuncton-generate-jwt-token/: deploy.sh  env.yaml  pyproject.toml
cloudfuncton-generate-jwt-token/cloudfuncton_generate_jwt_token/: app.py
cloudrun-apoenastack-api/: Dockerfile  deploy.sh  pyproject.toml
cloudrun-apoenastack-api/apoenastack_api/: app.py  schemas.py
cloudrun-apoenastack-api/apoenastack_api/database/: database_client.py  models.py
cloudrun-dashboard/: Dockerfile  pyproject.toml
cloudrun-dashboard/cloudrun_dashboard/: .env  api_client.py  app.py  token_logic.py
cloudsql-prd-database/: pyproject.toml
cloudsql-prd-database/cloudsql_prd_database/: create_tables.py  populate_tables.py
dev-database/: pyproject.toml
dev-database/dev_database/: create_tables.py  docker-compose.yaml  populate_tables.py
dev-database/dev_database/db/base/1/: 2674
dev-database/dev_database/db/base/12407/: 2673  pg_internal.init
dev-database/dev_database/db/base/16384/: 1247  1249  1259  16385  16391  2606  2608  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2840_vm  2841  3455  pg_internal.init
dev-database/dev_database/db/global/: 1262  2671  pg_control  pg_internal.init
dev-database/dev_database/db/pg_stat/: db_0.stat  db_12407.stat  db_16384.stat  global.stat
