[tool.poetry]
name = "apoenastack-api"
version = "0.1.0"
description = ""
authors = ["Iury Rosal <iuryrosal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.0"}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
google-api-python-client = "^2.140.0"
cloud-sql-python-connector = "0.9.3"
python-tds = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
