[tool.poetry]
name = "cloudrun-dashboard"
version = "0.1.0"
description = ""
authors = ["Iury Rosal <iuryrosal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
pandas = "^2.2.2"
google-cloud-secret-manager = "^2.20.2"
google-crc32c = "^1.5.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
